--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<span class="app-country-name" style="text-transform: uppercase; font-size: 18px; font-weight: 700;"></span>
+                  </div>
+                  <div class="exclusive-flag">
+                     <span style="font-size:43px" class="flag-icon flag-icon-squared app-country-flag"></span>
+                  </div>
 <script>
     // Function to fetch user's country information and update timer
     function fetchCountryInfoAndUpdateTimer() {
